Adapt the architecture to make moka possibly run headless
- Remove pointless dependency to UI and Papyrus in kernel
plugins
- Remplaced Preference with System Properties in kernel
- Added a console registration extensionpoint
- Restructured the engine hierarchy: differenciate debuggable engines
(that depends on profiling) and regular engines.
- Additional moka updates

Change-Id: If281a26f27fba29a53ac65465c0b8040e4cc2c63
Signed-off-by: Jeremie Tatibouet <jeremie.tatibouet@cea.fr>
Signed-off-by: Pauline DEVILLE <pauline.deville@cea.fr>