@@ -18,32 +18,32 @@ package org.eclipse.papyrus.moka.fuml.standardlibrary.library.integer;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.eclipse.papyrus.infra.core.Activator;
 import org.eclipse.papyrus.moka.fuml.commonbehavior.IParameterValue;
 import org.eclipse.papyrus.moka.fuml.commonbehavior.OpaqueBehaviorExecution;
 import org.eclipse.papyrus.moka.fuml.simpleclassifiers.IIntegerValue;
 import org.eclipse.papyrus.moka.fuml.simpleclassifiers.IRealValue;
 import org.eclipse.papyrus.moka.fuml.simpleclassifiers.IValue;
 import org.eclipse.papyrus.moka.fuml.simpleclassifiers.RealValue;
+import org.eclipse.papyrus.moka.fuml.standardlibrary.Activator;
 import org.eclipse.uml2.uml.PrimitiveType;
 
 public class Div_ extends OpaqueBehaviorExecution {
 
 	@Override
 	public void doBody(List<IParameterValue> inputParameters, List<IParameterValue> outputParameters) {
-		try{
-			int x = ((IIntegerValue)inputParameters.get(0).getValues().get(0)).getValue();
-			int y = ((IIntegerValue)inputParameters.get(1).getValues().get(0)).getValue();
-			if(y != 0) {
+		try {
+			int x = ((IIntegerValue) inputParameters.get(0).getValues().get(0)).getValue();
+			int y = ((IIntegerValue) inputParameters.get(1).getValues().get(0)).getValue();
+			if (y != 0) {
 				IRealValue result = new RealValue();
-				result.setValue(new Double(x) / new Double(y));
-				result.setType((PrimitiveType)this.locus.getFactory().getBuiltInType("Real"));
+				result.setValue(Double.valueOf(x) / Double.valueOf(y));
+				result.setType((PrimitiveType) this.locus.getFactory().getBuiltInType("Real"));
 				List<IValue> values = new ArrayList<IValue>();
 				values.add(result);
 				outputParameters.get(0).setValues(values);
 			}
 		} catch (Exception e) {
-			Activator.log.error("An error occured during the execution of Div_ " + e.getMessage(), e);
+			Activator.getDefault().logger.error("An error occured during the execution of Div_ " + e.getMessage(), e);
 		}
 	}
 
