@@ -16,12 +16,12 @@ package org.eclipse.papyrus.moka.fuml.standardlibrary.library.real;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.eclipse.papyrus.infra.core.Activator;
+import org.eclipse.papyrus.moka.fuml.commonbehavior.IParameterValue;
+import org.eclipse.papyrus.moka.fuml.commonbehavior.OpaqueBehaviorExecution;
 import org.eclipse.papyrus.moka.fuml.simpleclassifiers.IValue;
 import org.eclipse.papyrus.moka.fuml.simpleclassifiers.RealValue;
 import org.eclipse.papyrus.moka.fuml.simpleclassifiers.StringValue;
-import org.eclipse.papyrus.moka.fuml.commonbehavior.IParameterValue;
-import org.eclipse.papyrus.moka.fuml.commonbehavior.OpaqueBehaviorExecution;
+import org.eclipse.papyrus.moka.fuml.standardlibrary.Activator;
 import org.eclipse.uml2.uml.PrimitiveType;
 
 public class ToReal extends OpaqueBehaviorExecution {
@@ -31,13 +31,13 @@ public class ToReal extends OpaqueBehaviorExecution {
 		try {
 			String x = ((StringValue) inputParameters.get(0).getValues().get(0)).value;
 			RealValue result = new RealValue();
-			result.value = new Double(x);
+			result.value = Double.valueOf(x);
 			result.type = (PrimitiveType) this.locus.getFactory().getBuiltInType("Real");
 			List<IValue> outputs = new ArrayList<IValue>();
 			outputs.add(result);
 			outputParameters.get(0).setValues(outputs);
 		} catch (Exception e) {
-			Activator.log.error("An error occured during the execution of ToReal " + e.getMessage(), e);
+			Activator.getDefault().logger.error("An error occured during the execution of ToReal " + e.getMessage(), e);
 		}
 	}
 
